try to enable commenting via github issues

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,35 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
+  <div id="comments">
+    <h2>Comments</h2>
+    <div id="header">
+      Want to comment on this post? Visit <a href="https://github.com/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+    </div>
+  </div>
 
-  {% include disqus.html %}
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/datejs/Datejs/master/build/date-en-US.js"></script>
+  <script type="text/javascript">
+
+    function loadComments(data) {
+      for (var i=0; i<data.length; i++) {
+        var cuser = data[i].user.login;
+        var cuserlink = "https://www.github.com/" + data[i].user.login;
+        var clink = "https://github.com/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}#issuecomment-" + data[i].url.substring(data[i].url.lastIndexOf("/")+1);
+        var cbody = data[i].body_html;
+        var cavatarlink = data[i].user.avatar_url;
+        var cdate = Date.parse(data[i].created_at).toString("yyyy-MM-dd HH:mm:ss");
+
+        $("#comments").append("<div class='comment'><div class='commentheader'><div class='commentgravatar'>" + '<img src="' + cavatarlink + '" alt="" width="20" height="20">' + "</div><a class='commentuser' href=\""+ cuserlink + "\">" + cuser + "</a><a class='commentdate' href=\"" + clink + "\">" + cdate + "</a></div><div class='commentbody'>" + cbody + "</div></div>");
+      }
+    }
+
+    $.ajax("https://api.github.com/repos/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}", {
+      headers: {Accept: "application/vnd.github.full+json"},
+      success: function(msg){
+        loadComments(msg);
+      }
+    });
+  </script>
 </article>
