--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   <div id="comments">
     <h2>Comments</h2>
     <div id="header">
-      Want to comment on this post? Visit <a href="https://github.com/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}"> this post's issue page on GitHub</a> (you'll need a GitHub account).
+      Want to comment on this post? Visit <a href="https://github.com/jdcasey/jdcasey.github.io/issues/{{page.commentIssueId}}"> this post's issue page on GitHub</a> (you'll need a GitHub account).
     </div>
   </div>
 
@@ -27,7 +27,7 @@ layout: default
       for (var i=0; i<data.length; i++) {
         var cuser = data[i].user.login;
         var cuserlink = "https://www.github.com/" + data[i].user.login;
-        var clink = "https://github.com/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}#issuecomment-" + data[i].url.substring(data[i].url.lastIndexOf("/")+1);
+        var clink = "https://github.com/jdcasey/jdcasey.github.io/issues/{{page.commentIssueId}}#issuecomment-" + data[i].url.substring(data[i].url.lastIndexOf("/")+1);
         var cbody = data[i].body_html;
         var cavatarlink = data[i].user.avatar_url;
         var cdate = Date.parse(data[i].created_at).toString("yyyy-MM-dd HH:mm:ss");
@@ -36,7 +36,7 @@ layout: default
       }
     }
 
-    $.ajax("https://api.github.com/repos/jdcasey/jdcasey.github.com/issues/{{page.commentIssueId}}", {
+    $.ajax("https://api.github.com/repos/jdcasey/jdcasey.github.io/issues/{{page.commentIssueId}}", {
       headers: {Accept: "application/vnd.github.full+json"},
       success: function(msg){
         loadComments(msg);
