--- a/style.scss
+++ b/style.scss
@@ -265,6 +265,15 @@ nav {
     margin-top: 10px;
   }
 
+  .commentheader {
+    margin-top: 10px;
+    background-color: $gray;
+  }
+
+  .commentheader div {
+    display: inline-block;
+  }
+
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
